# cute

component_test/: CMakeLists.txt  Main.qml  main.cpp
component_test/plugins/: CMakeLists.txt
component_test/plugins/slab/: CMakeLists.txt  slab.cpp  slab.h  slabControls.qml
